# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,10 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import productsRouter from "./products";
+import ingredientsRouter from "./ingredients";
 
 const router: IRouter = Router();
-
 router.use(healthRouter);
-
+router.use(productsRouter);
+router.use(ingredientsRouter);
 export default router;
